css fix for non-fixed layoutby Milian Wolff removes gap between header and content and content and footer fixes placement of link to kde homepage in header
CCMAIL: mail@milianw.de

svn path=/trunk/www/sites/planet/; revision=988711

--- a/website/rawdog-variable.css
+++ b/website/rawdog-variable.css
@@ -84,9 +84,15 @@ margin-top: 10px;
 /*	float: left;*/
 }
 
+/* older blog entries */
+#content > p {
+  margin-bottom:0;
+  padding-bottom:10px;
+}
+
 div.day h2 {
-	margin: 10px 0;
-    padding: 0 0 0 20px;
+    margin: 0;
+    padding: 10px 0 10px 20px;
 }
 
 #footerright {
@@ -134,11 +140,11 @@ div.day h2 {
 
 #kdehome
 {
-	float: right;
+	float: left;
 	width: 50px;
 	height: 50px;
 	display: block;
-	right: 58px;
+	left: 690px;
 	top: 23px;
 	position: relative;
 }
